--- a/about.html
+++ b/about.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css">
 
     <title>About</title>
 </head>
-<body style="background-image: url(images/bg2.webp); background-size: cover; background-attachment: fixed;" class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
+<body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
    <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
             <div class="flex items-center gap-4">
                 <nav>
-                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Products</a>
+                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
+                    <a href="cart.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Cart</a>
                 </nav>
                 <nav class="relative group">
-                    <button class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6">☰</button>
-                    <div class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
+                    <button id="menuButton" class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6" aria-expanded="false">☰</button>
+                    <div id="menuDropdown" class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
                         <a href="about.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">About</a>
                         <a href="contacts.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Contacts</a>
                         <a href="login.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Login</a>
                         <a href="register.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Register</a>
-                        <a href="suppport.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
+                        <a href="support.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
                     </div>
                 </nav>
             </div>
@@ -30,9 +32,42 @@
     </header>
 
     <div class="container mx-auto p-4 flex-1">
-        <div class="bg-gray-900 text-white rounded-lg p-8 mb-20">
-            <h1 class="text-3xl md:text-5xl font-extrabold font-mono text-center my-50">Your next favorite device starts here.</h1>
+        <div class="bg-gray-900 text-white rounded-lg p-8 mb-6 ">
+            <h1 class="text-3xl md:text-5xl font-extrabold text-center my-50 font-mono">Your next favorite device starts here.</h1>
         </div>
+
+        <!-- Five-image horizontal gallery -->
+        <div class="max-w-6xl mx-auto mb-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 items-center">
+                <div class="about-card w-full  rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-lg" data-alt="Jimmar Bayona">
+                    <a href="https://www.instagram.com/j.bayonaa/" target="_blank" rel="noopener noreferrer" class="block w-full h-full">
+                        <img src="images/jimm.png" alt="Jimmar Bayona" class="w-full h-full object-cover">
+                    </a>
+                    <p class="text-center font-bold">Designer</p>
+    
+                </div>
+                <div class="about-card w-full   rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-lg" data-alt="Cris Jermaine">
+                    <a href="https://www.instagram.com/criz.py_/" target="_blank" rel="noopener noreferrer" class="block w-full h-full">
+                        <img src="images/crisj.png" alt="Cris Jermaine" class="w-full h-full object-cover">
+                
+                    </a>
+                    <p class="text-center font-bold">Programmer</p>
+                </div>
+                <div class="about-card w-full  rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-lg" data-alt="Maria Cianel">
+                    <a href="https://www.instagram.com/cia_buu/" target="_blank" rel="noopener noreferrer" class="block w-full h-full">
+                        <img src="images/shine.png" alt="Maria Cianel" class="w-full h-full object-cover">
+                    </a>
+                    <p class="text-center font-bold">Designer</p>
+                </div>
+                <div class="about-card w-full  rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-lg" data-alt="Kyla Faith">
+                    <a href="https://www.instagram.com/feytuhh/" target="_blank" rel="noopener noreferrer" class="block w-full h-full">
+                        <img src="images/faith.png" alt="Kyla Faith" class="w-full h-full object-cover">
+                    </a>
+                    <p class="text-center font-bold"> Document</p>
+                </div>
+            </div>
+        </div>
+
         <section>
             <h2 class="text-2xl font-bold mb-4">About Us</h2>
             <p class="mb-4">At APOL, we make premium technology accessible to everyone. We specialize in smartphones and laptops that fit your lifestyle—whether you’re a student, creator, gamer, or professional. Our goal is simple: deliver great gadgets, great deals, and great service. Tech shopping made easy, fast, and fun.</p>
@@ -41,15 +76,46 @@
         </section>
     </div>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-    <div class="flex justify-start gap-4 ml-2">
-        <span>Copyright</span>
-        <a href="https://www.instagram.com/criz.py_/" 
-           target="_blank" 
-           rel="noopener noreferrer"
-           class="underline hover:text-pink-500">
-           Instagram
-        </a>
-    </div>
-</footer>
+        <div class="flex justify-start gap-4 ml-2">
+            <span>Copyright</span>
+            <a href="https://www.instagram.com/criz.py_/" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               class="underline hover:text-pink-500">
+               Instagram
+            </a>
+        </div>
+    </footer>
 </body>
+<script>
+(function(){
+  const menuButton = document.getElementById('menuButton');
+  const menuDropdown = document.getElementById('menuDropdown');
+  if (!menuButton || !menuDropdown) return;
+
+ 
+  menuButton.addEventListener('click', function(e){
+    e.stopPropagation();
+    menuDropdown.classList.toggle('hidden');
+    const expanded = menuButton.getAttribute('aria-expanded') === 'true';
+    menuButton.setAttribute('aria-expanded', String(!expanded));
+  });
+
+  
+  document.addEventListener('click', function(e){
+    if (!menuDropdown.classList.contains('hidden') && !menuDropdown.contains(e.target) && e.target !== menuButton) {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+ 
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+})();
+</script>
 </html>
