--- a/contacts.html
+++ b/contacts.html
@@ -4,25 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css">
 
     <title>Contact Us</title>
 </head>
-<body style="background-image: url(images/bg2.webp); background-size: cover; background-attachment: fixed;" class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
+<body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
     <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
             <div class="flex items-center gap-4">
                 <nav>
-                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Products</a>
+                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
+                    <a href="cart.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Cart</a>
+
                 </nav>
                 <nav class="relative group">
-                    <button class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6">☰</button>
-                    <div class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
+                    <button id="menuButton" class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6" aria-expanded="false">☰</button>
+                    <div id="menuDropdown" class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
                         <a href="about.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">About</a>
                         <a href="contacts.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Contacts</a>
                         <a href="login.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Login</a>
                         <a href="register.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Register</a>
-                        <a href="suppport.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
+                        <a href="support.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
                     </div>
                 </nav>
             </div>
@@ -30,14 +33,14 @@
     </header>
 
     <div class="container mx-auto p-4 flex-1">
-        <section class="flex flex-col items-center">
+        <section>
             <h2 class="text-2xl font-bold mb-4">Get In Touch</h2>
 
             <form onsubmit="return validateForm()" class="max-w-md mb-8">
                 <input type="text" id="name" placeholder="Your Name" required class="w-full p-2 mb-3 border border-gray-300 rounded">
                 <input type="email" id="email" placeholder="Your Email" required class="w-full p-2 mb-3 border border-gray-300 rounded">
                 <textarea id="message" placeholder="Your Message" rows="5" required class="w-full p-2 mb-3 border border-gray-300 rounded"></textarea>
-                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full mb-8">Send Message</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Send Message</button>
             </form>
 
             <h3 class="text-xl font-bold mb-3">Contact Information</h3>
@@ -54,15 +57,46 @@
         }
     </script>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-    <div class="flex justify-start gap-4 ml-2">
-        <span>Copyright</span>
-        <a href="https://www.instagram.com/criz.py_/" 
-           target="_blank" 
-           rel="noopener noreferrer"
-           class="underline hover:text-pink-500">
-           Instagram
-        </a>
-    </div>
-</footer>
+        <div class="flex justify-start gap-4 ml-2">
+            <span>Copyright</span>
+            <a href="https://www.instagram.com/criz.py_/" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               class="underline hover:text-pink-500">
+               Instagram
+            </a>
+        </div>
+    </footer>
 </body>
+<script>
+(function(){
+  const menuButton = document.getElementById('menuButton');
+  const menuDropdown = document.getElementById('menuDropdown');
+  if (!menuButton || !menuDropdown) return;
+
+ 
+  menuButton.addEventListener('click', function(e){
+    e.stopPropagation();
+    menuDropdown.classList.toggle('hidden');
+    const expanded = menuButton.getAttribute('aria-expanded') === 'true';
+    menuButton.setAttribute('aria-expanded', String(!expanded));
+  });
+
+ 
+  document.addEventListener('click', function(e){
+    if (!menuDropdown.classList.contains('hidden') && !menuDropdown.contains(e.target) && e.target !== menuButton) {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+})();
+</script>
 </html>
