--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css">
 
     <title>Main Page</title>
 </head>
-<body style="background-image: url(images/bg2.webp); background-size: cover; background-attachment: fixed;" class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
+<body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
    <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
             <div class="flex items-center gap-4">
                 <nav>                   
-                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Products</a>
+                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
+                    <a href="cart.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Cart</a>
                 </nav>
                 <nav class="relative group">
-                    <button id="menuButton" class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6">☰</button>
-                    <div class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
+                    <button id="menuButton" class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6" aria-expanded="false">☰</button>
+                    <div id="menuDropdown" class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
                         <a href="about.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">About</a>
                         <a href="contacts.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Contacts</a>
                         <a href="login.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Login</a>
                         <a href="register.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Register</a>
-                        <a href="suppport.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
+                        <a href="support.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
                     </div>
                 </nav>
             </div>
@@ -50,7 +52,39 @@
         </div>
         </main>
     </div>
-  
+    <div class="container mx-auto p-4">
+        <section class="max-w-6xl mx-auto mt-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid1.jpg" alt="Grid 1" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid2.jpg" alt="Grid 2" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid3.jpg" alt="Grid 3" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid4.jpg" alt="Grid 4" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid5.jpg" alt="Grid 5" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid6.jpg" alt="Grid 6" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid7.jpg" alt="Grid 7" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid8.jpg" alt="Grid 8" class="w-full h-48 object-cover">
+                </div>
+                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <img src="images/grid9.jpg" alt="Grid 9" class="w-full h-48 object-cover">
+                </div>
+            </div>
+        </section>
+    </div>
 <footer class="mt-6 w-full bg-white text-gray-900 p-2">
     <div class="flex justify-start gap-4 ml-2">
         <span>Copyright</span>
@@ -64,11 +98,34 @@
 </footer>
 </body>
 <script>
+(function(){
   const menuButton = document.getElementById('menuButton');
   const menuDropdown = document.getElementById('menuDropdown');
+  if (!menuButton || !menuDropdown) return;
 
-  menuButton.addEventListener('click', () => {
-      menuDropdown.classList.toggle('hidden'); 
+ 
+  menuButton.addEventListener('click', function(e){
+    e.stopPropagation();
+    menuDropdown.classList.toggle('hidden');
+    const expanded = menuButton.getAttribute('aria-expanded') === 'true';
+    menuButton.setAttribute('aria-expanded', String(!expanded));
   });
+
+  
+  document.addEventListener('click', function(e){
+    if (!menuDropdown.classList.contains('hidden') && !menuDropdown.contains(e.target) && e.target !== menuButton) {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+ 
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+})();
 </script>
 </html>
