--- a/products.html
+++ b/products.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="style.css">
 
     <title>Products</title>
 </head>
-<body style="background-image: url(images/bg2.webp); background-size: cover; background-attachment: fixed;" class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
-   <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
+<body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
+     <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
             <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
             <div class="flex items-center gap-4">
                 <nav>
-                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Products</a>
+                    <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
+                    <a href="cart.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Cart</a>
                 </nav>
                 <nav class="relative group">
-                    <button class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6">☰</button>
-                    <div class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
+                    <button id="menuButton" class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6" aria-expanded="false">☰</button>
+                    <div id="menuDropdown" class="hidden group-hover:flex flex-col absolute right-0 bg-white border border-gray-300 rounded shadow-lg z-10">
                         <a href="about.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">About</a>
                         <a href="contacts.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Contacts</a>
                         <a href="login.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Login</a>
                         <a href="register.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Register</a>
-                        <a href="suppport.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
+                        <a href="support.html" class="px-4 py-2 text-gray-900 hover:bg-gray-200">Support</a>
                     </div>
                 </nav>
             </div>
@@ -42,7 +44,7 @@
                     <h3 class="text-lg font-bold mb-2">Product 1</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
                     <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Add to Cart</button>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 1', price: 1000, desc: 'Product 1 description', image: 'images/grid1.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 2 -->
@@ -53,7 +55,7 @@
                     <h3 class="text-lg font-bold mb-2">Product 2</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
                     <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Add to Cart</button>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 2', price: 1200, desc: 'Product 2 description', image: 'images/grid2.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 3 -->
@@ -64,7 +66,7 @@
                     <h3 class="text-lg font-bold mb-2">Product 3</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
                     <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Add to Cart</button>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 3', price: 900, desc: 'Product 3 description', image: 'images/grid3.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 4 -->
@@ -75,7 +77,7 @@
                     <h3 class="text-lg font-bold mb-2">Product 4</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
                     <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Add to Cart</button>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 4', price: 1500, desc: 'Product 4 description', image: 'images/grid4.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 5 -->
@@ -86,7 +88,7 @@
                     <h3 class="text-lg font-bold mb-2">Product 5</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
                     <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Add to Cart</button>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 5', price: 800, desc: 'Product 5 description', image: 'images/grid5.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 6 -->
@@ -97,21 +99,52 @@
                     <h3 class="text-lg font-bold mb-2">Product 6</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
                     <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full">Add to Cart</button>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 6', price: 2000, desc: 'Product 6 description', image: 'images/grid6.jpg'})">Add to Cart</button>
                 </div>
             </div>
         </section>
     </div>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-    <div class="flex justify-start gap-4 ml-2">
-        <span>Copyright</span>
-        <a href="https://www.instagram.com/criz.py_/" 
-           target="_blank" 
-           rel="noopener noreferrer"
-           class="underline hover:text-pink-500">
-           Instagram
-        </a>
-    </div>
-</footer>
+        <div class="flex justify-start gap-4 ml-2">
+            <span>Copyright</span>
+            <a href="https://www.instagram.com/criz.py_/" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               class="underline hover:text-pink-500">
+               Instagram
+            </a>
+        </div>
+    </footer>
 </body>
+<script>
+(function(){
+  const menuButton = document.getElementById('menuButton');
+  const menuDropdown = document.getElementById('menuDropdown');
+  if (!menuButton || !menuDropdown) return;
+
+
+  menuButton.addEventListener('click', function(e){
+    e.stopPropagation();
+    menuDropdown.classList.toggle('hidden');
+    const expanded = menuButton.getAttribute('aria-expanded') === 'true';
+    menuButton.setAttribute('aria-expanded', String(!expanded));
+  });
+
+
+  document.addEventListener('click', function(e){
+    if (!menuDropdown.classList.contains('hidden') && !menuDropdown.contains(e.target) && e.target !== menuButton) {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+})();
+</script>
 </html>
