--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <p class="mb-4">Welcome to APOL!</p>
             <!-- Three-image gallery -->
             <div class="mt-4">
-                <div class="flex justify-center gap-6"> 
-                    <div class="w-[480px] h-[500px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
+                <div class="flex items-center justify-center grid-cols-3 gap-6"> 
+                    <div class="aspect-square w-64 md:w-80 lg:w-[480px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
                         <img src="images/image1.jpg" alt="Gallery Image 1" class="w-full h-full object-cover">
                     </div>
-                    <div class="w-[480px] h-[500px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
+                    <div class="aspect-square w-64 md:w-80 lg:w-[480px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
                         <img src="images/shocked.gif" alt="Gallery Image 2" class="w-full h-full object-cover">
                     </div>
-                    <div class="w-[480px] h-[500px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
+                    <div class="aspect-square w-64 md:w-80 lg:w-[480px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
                         <img src="images/pof.jpg" alt="Gallery Image 3" class="w-full h-full object-cover">
                     </div>
                 </div>
