--- a/products.html
+++ b/products.html
@@ -43,8 +43,8 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 1</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 1', price: 1000, desc: 'Product 1 description', image: 'images/grid1.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">$600.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 1', price: 600, desc: 'Product 1 description', image: 'images/grid1.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 2 -->
@@ -54,8 +54,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 2</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 2', price: 1200, desc: 'Product 2 description', image: 'images/grid2.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">$700.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
+                    onclick="apolAddToCart({title: 'Product 2', price: 700, desc: 'Product 2 description', image: 'images/grid2.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 3 -->
@@ -65,8 +66,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 3</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 3', price: 900, desc: 'Product 3 description', image: 'images/grid3.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">$550.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
+                    onclick="apolAddToCart({title: 'Product 3', price: 550, desc: 'Product 3 description', image: 'images/grid3.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 4 -->
@@ -76,8 +78,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 4</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 4', price: 1500, desc: 'Product 4 description', image: 'images/grid4.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">$330.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
+                    onclick="apolAddToCart({title: 'Product 4', price: 330, desc: 'Product 4 description', image: 'images/grid4.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 5 -->
@@ -87,8 +90,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 5</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 5', price: 800, desc: 'Product 5 description', image: 'images/grid5.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">$200.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
+                    onclick="apolAddToCart({title: 'Product 5', price: 200, desc: 'Product 5 description', image: 'images/grid5.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 6 -->
@@ -98,8 +102,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 6</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$0.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 6', price: 2000, desc: 'Product 6 description', image: 'images/grid6.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">$150.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
+                    onclick="apolAddToCart({title: 'Product 6', price: 150, desc: 'Product 6 description', image: 'images/grid6.jpg'})">Add to Cart</button>
                 </div>
             </div>
         </section>
@@ -107,7 +112,7 @@
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
         <div class="flex justify-start gap-4 ml-2">
             <span>Copyright</span>
-            <a href="https://www.instagram.com/criz.py_/" 
+            <a href="https://www.instagram.com/criz
                target="_blank" 
                rel="noopener noreferrer"
                class="underline hover:text-pink-500">
@@ -146,5 +151,13 @@
     }
   });
 })();
+
+(function(){
+      const STORAGE_KEY = 'apol_cart_v1';
+      function readCart(){ try { return JSON.parse(localStorage.getItem(STORAGE_KEY)) || []; } catch(e){ return []; } }
+      function writeCart(c){ localStorage.setItem(STORAGE_KEY, JSON.stringify(c)); }
+      function apolAddToCart(item){ const cart = readCart(); cart.push(item); writeCart(cart); alert('Added to cart: ' + item.title); }
+      window.apolAddToCart = apolAddToCart;
+    })();
 </script>
 </html>
