--- a/cart.html
+++ b/cart.html
@@ -30,14 +30,14 @@
     </div>
   </header>
 
-  <main class="container mx-auto p-4 flex-1">
+  <main class="container mx-auto p-4 flex-1 max-w-4xl">
     <h1 class="text-2xl font-bold mb-4">Shopping Cart</h1>
-    <div id="cartItemsContainer" class="space-y-4">
-      <!-- Cart items rendered by js/cart.js -->
+    <div id="cartItemsContainer" class="space-y-6 w-full max-w-4xl">
+      
     </div>
 
-    <div id="cartSummary" class="mt-6 bg-white p-4 rounded border max-w-xl">
-      <!-- Summary rendered by js/cart.js -->
+    <div id="cartSummary" class="mt-6 bg-white p-12 s rounded border w-full max-w-2xl">
+
     </div>
   </main>
 
