--- a/products.html
+++ b/products.html
@@ -43,8 +43,8 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 1</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$600.00</p>
-                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 1', price: 600, desc: 'Product 1 description', image: 'images/grid1.jpg'})">Add to Cart</button>
+                    <p class="text-xl font-bold text-blue-600 mb-4">₱110.00</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" onclick="apolAddToCart({title: 'Product 1', price: 110, desc: 'Product 1 description', image: 'images/grid1.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 2 -->
@@ -54,9 +54,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 2</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$700.00</p>
+                    <p class="text-xl font-bold text-blue-600 mb-4">₱100.00</p>
                     <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
-                    onclick="apolAddToCart({title: 'Product 2', price: 700, desc: 'Product 2 description', image: 'images/grid2.jpg'})">Add to Cart</button>
+                    onclick="apolAddToCart({title: 'Product 2', price: 100, desc: 'Product 2 description', image: 'images/grid2.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 3 -->
@@ -66,9 +66,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 3</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$550.00</p>
+                    <p class="text-xl font-bold text-blue-600 mb-4">₱100.00</p>
                     <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
-                    onclick="apolAddToCart({title: 'Product 3', price: 550, desc: 'Product 3 description', image: 'images/grid3.jpg'})">Add to Cart</button>
+                    onclick="apolAddToCart({title: 'Product 3', price: 100, desc: 'Product 3 description', image: 'images/grid3.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 4 -->
@@ -78,9 +78,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 4</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$330.00</p>
+                    <p class="text-xl font-bold text-blue-600 mb-4">₱100.00</p>
                     <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
-                    onclick="apolAddToCart({title: 'Product 4', price: 330, desc: 'Product 4 description', image: 'images/grid4.jpg'})">Add to Cart</button>
+                    onclick="apolAddToCart({title: 'Product 4', price: 100, desc: 'Product 4 description', image: 'images/grid4.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 5 -->
@@ -90,9 +90,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 5</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$200.00</p>
+                    <p class="text-xl font-bold text-blue-600 mb-4">₱100.00</p>
                     <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
-                    onclick="apolAddToCart({title: 'Product 5', price: 200, desc: 'Product 5 description', image: 'images/grid5.jpg'})">Add to Cart</button>
+                    onclick="apolAddToCart({title: 'Product 5', price: 100, desc: 'Product 5 description', image: 'images/grid5.jpg'})">Add to Cart</button>
                 </div>
 
                 <!-- Product 6 -->
@@ -102,9 +102,9 @@
                     </div>
                     <h3 class="text-lg font-bold mb-2">Product 6</h3>
                     <p class="text-gray-600 mb-4">Product description goes here</p>
-                    <p class="text-xl font-bold text-blue-600 mb-4">$150.00</p>
+                    <p class="text-xl font-bold text-blue-600 mb-4">₱100.00</p>
                     <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 w-full" 
-                    onclick="apolAddToCart({title: 'Product 6', price: 150, desc: 'Product 6 description', image: 'images/grid6.jpg'})">Add to Cart</button>
+                    onclick="apolAddToCart({title: 'Product 6', price: 100, desc: 'Product 6 description', image: 'images/grid6.jpg'})">Add to Cart</button>
                 </div>
             </div>
         </section>
