--- a/contacts.html
+++ b/contacts.html
@@ -11,12 +11,11 @@
 <body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
     <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
-            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
+            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Nyek</a>
             <div class="flex items-center gap-4">
                 <nav>
                     <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
                     <a href="cart.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Cart</a>
-
                 </nav>
                 <nav class="relative group">
                     <button id="menuButton" class="text-gray-900 hover:text-gray-600 transition text-2xl mr-6" aria-expanded="false">☰</button>
@@ -46,7 +45,7 @@
             <h3 class="text-xl font-bold mb-3">Contact Information</h3>
             <p class="mb-2">Email: cjermaine1205@gmail.com</p>
             <p class="mb-2">Phone: 0912345678</p>
-            <p class="mb-2">Facebook: fb.com/APOL</p>
+            <p class="mb-2">Facebook: fb.com/Nyek</p>
         </section>
     </div>
 
@@ -57,8 +56,8 @@
         }
     </script>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-        <div class="flex justify-start gap-4 ml-2">
-            <span>Copyright</span>
+        <div class="flex justify-start gap-4 ml-2 font-bold text-sm">
+            <span>© 2025</span>
             <a href="https://www.instagram.com/criz.py_/" 
                target="_blank" 
                rel="noopener noreferrer"
