--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 <body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
    <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
-            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
+            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Nyek</a>
             <div class="flex items-center gap-4">
                 <nav>
                     <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
@@ -36,10 +36,10 @@
             <h2 class="text-2xl font-bold mb-4 text-center">Register/Create an Account</h2>
 
             <form id="registerForm" onsubmit="return validateRegister()" class="max-w-md">
-                <input type="text" id="fullname" placeholder="Full Name" required class="w-full p-2 mb-3 text-gray-900 border-gray-700 rounded">
-                <input type="email" id="email" placeholder="Email" required class="w-full p-2 mb-3 border border-gray-300 rounded">
-                <input type="password" id="password" placeholder="Password" required class="w-full p-2 mb-3 border border-gray-300 rounded">
-                <input type="password" id="confirmPassword" placeholder="Confirm Password" required class="w-full p-2 mb-3 border border-gray-300 rounded">
+                <input type="text" id="fullname" placeholder="Full Name" required class="w-full p-2 mb-3 text-gray-900 border border-gray-100 rounded">
+                <input type="email" id="email" placeholder="Email" required class="w-full p-2 mb-3 border border-gray-100 rounded">
+                <input type="password" id="password" placeholder="Password" required class="w-full p-2 mb-3 border border-gray-100 rounded">
+                <input type="password" id="confirmPassword" placeholder="Confirm Password" required class="w-full p-2 mb-3 border border-gray-100 rounded">
                 <button type="submit" class="w-full bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Register</button>
             </form>
             <p id="registerMessage" class="mt-4 text-lg font-semibold text-green-600"></p>
@@ -48,8 +48,8 @@
 
     <script src="js/script.js"></script>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-        <div class="flex justify-start gap-4 ml-2">
-            <span>Copyright</span>
+        <div class="flex justify-start gap-4 ml-2 font-bold text-sm">
+            <span>© 2025</span>
             <a href="https://www.instagram.com/criz.py_/" 
                target="_blank" 
                rel="noopener noreferrer"
