--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
    <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
-            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
+            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Nyek</a>
             <div class="flex items-center gap-4">
                 <nav>
                     <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
@@ -33,7 +33,7 @@
 
     <div class="container mx-auto p-4 flex-1">
         <div class="bg-gray-900 text-white rounded-lg p-8 mb-6 ">
-            <h1 class="text-3xl md:text-5xl font-extrabold text-center my-50 font-mono">Your next favorite device starts here.</h1>
+            <h1 class="text-3xl md:text-5xl font-extrabold text-center my-50 font-mono">Just dont give up.</h1>
         </div>
 
         <!-- Five-image horizontal gallery -->
@@ -70,14 +70,14 @@
 
         <section>
             <h2 class="text-2xl font-bold mb-4">About Us</h2>
-            <p class="mb-4">At APOL, we make premium technology accessible to everyone. We specialize in smartphones and laptops that fit your lifestyle—whether you’re a student, creator, gamer, or professional. Our goal is simple: deliver great gadgets, great deals, and great service. Tech shopping made easy, fast, and fun.</p>
-            <p class="mb-4">Our mission is to help you achieve your goals and succeed in your endeavors.</p>
+            <p class="mb-4">At NYEK, we make quality footwear accessible to everyone. We specialize in stylish, durable, and comfortable shoes that fit your lifestyle—whether you’re a student, athlete, worker, or everyday traveler. Our goal is simple: deliver great designs, great comfort, and great value. Shoe shopping made easy, fast, and fun.</p>
+            <p class="mb-4">Our mission is to help you move confidently and achieve more with every step.</p>
             <p>Thank you for visiting our site!</p>
         </section>
     </div>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-        <div class="flex justify-start gap-4 ml-2">
-            <span>Copyright</span>
+        <div class="flex justify-start gap-4 ml-2 font-bold text-sm">
+           <span>© 2025</span>
             <a href="https://www.instagram.com/criz.py_/" 
                target="_blank" 
                rel="noopener noreferrer"
