--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
     <title>Main Page</title>
@@ -11,7 +12,7 @@
 <body class="bg-white text-gray-900 font-sans m-0 p-0 flex flex-col min-h-screen">
    <header class="mb-6 w-screen relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw]">
         <div class="bg-white p-4 flex justify-between items-center">
-            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Apol</a>
+            <a href="index.html" class="text-xl font-bold text-gray-900 pl-4 hover:text-gray-600">Nyek</a>
             <div class="flex items-center gap-4">
                 <nav>                   
                     <a href="products.html" class="py-2 text-gray-900 text-sm hover:text-gray-400 mr-6">Shop</a>
@@ -32,62 +33,95 @@
     </header>
     <div class="container mx-auto p-4 justify-center text-center text-2xl font-bold flex-1 ">
         <main>
-            <p class="mb-4">Welcome to APOL!</p>
-            <!-- Three-image gallery -->
+            <p class="mb-4">Welcome to NYEK!</p>
+            <!-- Banner board -->
             <div class="mt-4">
-                <div class="flex items-center justify-center grid-cols-3 gap-6"> 
-                    <div class="aspect-square w-64 md:w-80 lg:w-[480px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
-                        <img src="images/image1.jpg" alt="Gallery Image 1" class="w-full h-full object-cover">
-                    </div>
-                    <div class="aspect-square w-64 md:w-80 lg:w-[480px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
-                        <img src="images/shocked.gif" alt="Gallery Image 2" class="w-full h-full object-cover">
-                    </div>
-                    <div class="aspect-square w-64 md:w-80 lg:w-[480px] bg-gray-200 rounded overflow-hidden transform transition-transform duration-200 hover:scale-105 hover:shadow-xl cursor-pointer rounded-xl">
-                        <img src="images/pof.jpg" alt="Gallery Image 3" class="w-full h-full object-cover">
+                <div class="relative w-full rounded-lg overflow-hidden shadow-lg">
+                    <img src="images/banner.png" alt="NYEK banner" class="w-full h-56 sm:h-72 md:h-96 object-cover">
+                    <div class="absolute inset-0 bg-black/40 flex items-center justify-center">
+                        <div class="text-center text-white px-4">
+                            <h2 class="text-2xl sm:text-3xl md:text-4xl font-extrabold font-nike">Step Confidently — NYEK Collection</h2>
+                            <p class="mt-2 max-w-2xl mx-auto text-sm sm:text-base ">Discover durable, stylish footwear for everyday wear. New arrivals and exclusive drops available now.</p>
+                            <a href="products.html" class="inline-block mt-4 text-white px-4 py-2 rounded font-medium ">Shop Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="mt-15">
-            <p class="text-center font-sans font-semibold max-w-2xl mx-auto text-xl">Hola! We are APOL — your trusted source for premium smartphones and laptops. We bring quality, performance, and reliability to every device you choose.</p>
-        </div>
         </main>
     </div>
     <div class="container mx-auto p-4">
         <section class="max-w-6xl mx-auto mt-8">
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid1.jpg" alt="Grid 1" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid2.jpg" alt="Grid 2" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid3.jpg" alt="Grid 3" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid4.jpg" alt="Grid 4" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid5.jpg" alt="Grid 5" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid6.jpg" alt="Grid 6" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid7.jpg" alt="Grid 7" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid8.jpg" alt="Grid 8" class="w-full h-48 object-cover">
-                </div>
-                <div class="overflow-hidden rounded-lg bg-gray-100 hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <img src="images/grid9.jpg" alt="Grid 9" class="w-full h-48 object-cover">
-                </div>
+            <h3 class="text-2xl font-bold text-center mb-6">Featured Products</h3>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <div class="h-48 bg-white flex items-center justify-center p-4 overflow-hidden">
+                        <img src="images/adidas.png" alt="Adidas Samba OG" class="max-h-full max-w-full object-contain">
+                    </div>
+                    <div class="p-3 text-center">
+                        <div class="font-semibold">Adidas Samba OG</div>
+                        <div class="text-sm text-gray-600">₱5,000</div>
+                    </div>
+                </a>
+
+                <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <div class="h-48 bg-white flex items-center justify-center p-4 overflow-hidden">
+                        <img src="images/voodoo.png" alt="Jordan 1 Retro Low" class="max-h-full max-w-full object-contain">
+                    </div>
+                    <div class="p-3 text-center">
+                        <div class="font-semibold">Jordan 1 Retro Low</div>
+                        <div class="text-sm text-gray-600">₱4,000</div>
+                    </div>
+                </a>
+
+                <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <div class="h-48 bg-white flex items-center justify-center p-4 overflow-hidden">
+                        <img src="images/newb.png" alt="New Balance 2002R" class="max-h-full max-w-full object-contain">
+                    </div>
+                    <div class="p-3 text-center">
+                        <div class="font-semibold">New Balance 2002R</div>
+                        <div class="text-sm text-gray-600">₱11,990</div>
+                    </div>
+                </a>
+
+                <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <div class="h-48 bg-white flex items-center justify-center p-4 overflow-hidden">
+                        <img src="images/china.png" alt="Kobe 9 EM Low Protro" class="max-h-full max-w-full object-contain">
+                    </div>
+                    <div class="p-3 text-center">
+                        <div class="font-semibold">Kobe 9 EM Low</div>
+                        <div class="text-sm text-gray-600">₱25,000</div>
+                    </div>
+                </a>
+
+                <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <div class="h-48 bg-gray-100 flex items-center justify-center p-4 overflow-hidden">
+                        <img src="images/panda.png" alt="Nike Dunk Low Retro" class="max-h-full max-w-full object-contain">
+                    </div>
+                    <div class="p-3 text-center">
+                        <div class="font-semibold">Nike Dunk Low Retro</div>
+                        <div class="text-sm text-gray-600">₱7,000</div>
+                    </div>
+                </a>
+
+                <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
+                    <div class="h-48 bg-white flex items-center justify-center p-4 overflow-hidden">
+                        <img src="images/travis.png" alt="Jordan 1 Retro Low OG SP" class="max-h-full max-w-full object-contain">
+                    </div>
+                    <div class="p-3 text-center">
+                        <div class="font-semibold">Jordan 1 Retro Low OG SP</div>
+                        <div class="text-sm text-gray-600">₱35,000</div>
+                    </div>
+                </a>
             </div>
+             <div class="mt-15">
+            <p class="text-center font-sans font-semibold max-w-2xl mx-auto text-xl">We are NYEK — your trusted choice for stylish and comfortable footwear.
+                We bring quality, durability, and everyday performance to every pair you wear. Step confidently, move freely — only with NYEK.</p>
+        </div>
         </section>
     </div>
 <footer class="mt-6 w-full bg-white text-gray-900 p-2">
-    <div class="flex justify-start gap-4 ml-2">
-        <span>Copyright</span>
+    <div class="flex justify-start gap-4 ml-2 font-bold text-sm">
+        <span>© 2025</span>
         <a href="https://www.instagram.com/criz.py_/" 
            target="_blank" 
            rel="noopener noreferrer"
