--- a/contacts.html
+++ b/contacts.html
@@ -43,7 +43,7 @@
             </form>
 
             <h3 class="text-xl font-bold mb-3">Contact Information</h3>
-            <p class="mb-2">Email: cjermaine1205@gmail.com</p>
+            <p class="mb-2">Email: nyek@gmail.com</p>
             <p class="mb-2">Phone: 0912345678</p>
             <p class="mb-2">Facebook: fb.com/Nyek</p>
         </section>
@@ -57,7 +57,7 @@
     </script>
     <footer class="mt-6 w-full bg-white text-gray-900 p-2">
         <div class="flex justify-start gap-4 ml-2 font-bold text-sm">
-            <span>© 2025</span>
+            <span>© 2025</span>s
             <a href="https://www.instagram.com/criz.py_/" 
                target="_blank" 
                rel="noopener noreferrer"
