--- a/support.html
+++ b/support.html
@@ -52,7 +52,7 @@
             <div class="mt-6">
                 <h3 class="text-xl font-bold mb-3">Frequently Asked Questions</h3>
                 <p class="mb-2"><strong>Q: How can I contact support?</strong></p>
-                <p class="mb-4">A: You can reach us through the contact form or email us at support@example.com</p>
+                <p class="mb-4">A: You can reach us through the contact form or email us at nyek@gmail.com</p>
                 <p class="mb-2"><strong>Q: What are your business hours?</strong></p>
                 <p class="mb-4">A: We are available Monday to Friday, 9 AM to 5 PM.</p>
                 <p class="text-gray-900"><a href="contacts.html" class="hover:text-red-600 underline ">Contact us here</a></p>
