--- a/cart.html
+++ b/cart.html
@@ -50,4 +50,35 @@
 
   <script src="js/script.js"></script>
 </body>
+<script>
+(function(){
+  const menuButton = document.getElementById('menuButton');
+  const menuDropdown = document.getElementById('menuDropdown');
+  if (!menuButton || !menuDropdown) return;
+
+ 
+  menuButton.addEventListener('click', function(e){
+    e.stopPropagation();
+    menuDropdown.classList.toggle('hidden');
+    const expanded = menuButton.getAttribute('aria-expanded') === 'true';
+    menuButton.setAttribute('aria-expanded', String(!expanded));
+  });
+
+ 
+  document.addEventListener('click', function(e){
+    if (!menuDropdown.classList.contains('hidden') && !menuDropdown.contains(e.target) && e.target !== menuButton) {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+
+
+  document.addEventListener('keydown', function(e){
+    if (e.key === 'Escape') {
+      menuDropdown.classList.add('hidden');
+      menuButton.setAttribute('aria-expanded', 'false');
+    }
+  });
+})();
+</script>
 </html>
