--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </a>
 
                 <a href="products.html" class="block overflow-hidden rounded-lg bg-white hover:shadow-xl transform hover:scale-105 transition duration-200">
-                    <div class="h-48 bg-gray-100 flex items-center justify-center p-4 overflow-hidden">
+                    <div class="h-48 bg-white flex items-center justify-center p-4 overflow-hidden">
                         <img src="images/panda.png" alt="Nike Dunk Low Retro" class="max-h-full max-w-full object-contain">
                     </div>
                     <div class="p-3 text-center">
